--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "@trendmicro/react-sidenav": "^0.5.0",
-    "framer-motion": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-ripples": "^2.2.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
