--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "django-news",
   "version": "0.1.0",
-  "proxy": "http://localhost:8000",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
@@ -13,7 +13,9 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-ripples": "^2.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-toastify": "^7.0.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
